# HARNESS_88

./: .gitattributes  .gitignore  AGENTS.md  AGENT_SITE_TOOLING.md  DESIGN.md  HARNESS_88_FOR_SITE_OWNER.ru.md  PRODUCT.md  README.md  README.ru.md  RELEASE_NOTES.md  SITE_GATES.md  SITE_INTAKE.md  STACK.md  START_HERE.md  llms.txt  purpose.md  pyproject.toml  schema.md
.github/workflows/: quality.yml
NOTICE/: THIRD_PARTY.md
agents/: TEAM.md  conductor.md  tooling-matrix.md
agents/harness/: README.md  acceptance-checklists.md  checkpoint-template.md  deploy-handoff-template.md  metrics.md  prd-template.md  progress-template.md  site-gates-template.md  site-references-template.md  spec-template.md  stack-options.md  stack-profiles.json  task-template.md
agents/protocols/: conductor-runtime.md  conversation-delegation.md  design-resources.md  mcp-policy.md  skill-capture.md  tooling-onboarding.md  wiki-operations.md
agents/resources/: README.md  tooling-sources.json
agents/roles/: backend-data.md  design-artifact.md  devops-release.md  (+10 more)
frontend/: README.md  package-lock.json
tests/: test_agent_instructions.py  test_capabilities.py  test_ci_config.py  test_cli_contracts.py  test_conductor_runtime.py  test_core.py  test_doctor.py  test_frontend_build_config.py  test_gates.py  test_harness.py  test_intake.py  test_quality.py  test_references.py  test_security.py  test_site_generator.py  test_stack_cli.py  test_stack_neutral.py  test_status_fields.py  test_task_cli.py  test_task_evidence.py  test_tasks.py
tools/: llm_wiki.py
wiki/: index.md  log.md  review.md
(+76 files in other folders)
